--- a/bootstrap-sidebar/index.html
+++ b/bootstrap-sidebar/index.html
@@ -46,7 +46,7 @@
                                         <a href="#">Инвестиционный портфель ПИФ</a>
                                     </div>
                                     <div class="sidebar__menuLink">
-                                        <a href="#">Заявки на приобритение</a>
+                                        <a href="#">Заявки на приобретение</a>
                                     </div>
                                     <div class="sidebar__menuLink">
                                         <a href="#">Сводный отчет</a>
