--- a/jstoy/index.html
+++ b/jstoy/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <meta name="author" content="paul">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="shortcut icon" href="data:image/png;base64,
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQBAMAAADt3eJSAAAABGdBTUEAALGPC/xh
+        BQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAA
+        IVBMVEUgnO8gnO4gnO4zpe9rvfT3/P7O6fua0vhQsfJ4w/X///9oq2+ZAAAAAnRS
+        TlN++QNO0/gAAAABYktHRApo0PRWAAAAB3RJTUUH5AcWDSAbkWpZegAAAHBJREFU
+        CNdjYFRSUjJWUhJgEFJSUglTUlJkAAqohwMJEEOlGMpQVoIyXJvMwoxAjFKnVFcn
+        ECO1KTUNJKUcqj41EsRQCXOdGQpiqIeGhoeBGG5hnWkVQEZZaBLYHJXw0iIwQzgs
+        zEgJZCmjymSQgAAACxQa7NZGVo0AAAAldEVYdGRhdGU6Y3JlYXRlADIwMjAtMDct
+        MjJUMTA6MzI6MjcrMDM6MDCAEZlKAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDIwLTA3
+        LTIyVDEwOjMyOjI3KzAzOjAw8Uwh9gAAAABJRU5ErkJggg==">
     <title>JSToy</title>
   </head>
   <body>
