--- a/jstoy/index.html
+++ b/jstoy/index.html
@@ -21,7 +21,8 @@
     <div id="toy-in">
       <div id="info">
         <span>use `print()` for raw output, </span>
-        <span>use `load(file, callback)` for loading script files</span>
+        <span>use `load(src, callback)` for loading script files, </span>
+        <span>use `link(href)` for adding .css files</span>
       </div>
       <div>
         <form name="edit" id="input" type="post" action="">
