--- a/bootstrap-sidebar/index.html
+++ b/bootstrap-sidebar/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.css" type="text/css">
   </head>
   <body>
+    <div class="container-fluid">
 
                         <div class="sidebar__menu">
                             <div class="sidebar__menuItem sidebar__menuItem--active">
@@ -106,7 +107,7 @@
                             </div>
                         </div>
 
-
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.js"></script>
     <script src="sidebarMenu.js"></script>
