--- a/jstoy/index.html
+++ b/jstoy/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="paul">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="shortcut icon" href="data:image/png;base64,
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQBAMAAADt3eJSAAAABGdBTUEAALGPC/xh
@@ -50,4 +51,3 @@
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
-
