--- a/jstoy/index.html
+++ b/jstoy/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <h1>JSToy</h1>
-    <div id="toy-in">
+    <div id="toy-input">
       <div id="info">
         <span>use `print()` for raw output, </span>
         <span>use `load(src, callback)` for loading script files, </span>
@@ -28,23 +28,23 @@
       <div>
         <form name="edit" id="input" type="post" action="">
           <div>
-            <span class="txtspace">
+            <span class="src-space">
               <textarea name="code" form="input" rows="24" cols="80"
                   spellcheck="false" autocorrect="off"></textarea>
             </span>
           </div>
           <div>
-            <span class="btnspace">
+            <span class="btn-space">
               <input name="submit" type="submit" value="eval()">
             </span>
-            <span class="btnspace">
+            <span class="btn-space">
               <input name="save" type="button" value="save">
             </span>
           </div>
         </form>
       </div>
     </div>
-    <div id="toy-out">
+    <div id="toy-output">
       <div id="result"></div>
       <span id="print"></span>
     </div>
